<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:gravity="fill_horizontal"
    android:orientation="vertical"
    tools:context="com.jonathankoomjian.umlikeyouknow.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_marginTop="25dp"
        >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/main_subtitle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:hint="@string/main_filler_placeholder"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:checked="false"
        android:gravity="center"
        android:drawableStart="@drawable/ic_action_mic"
        android:paddingLeft="130dp"
        android:paddingRight="160dp"
        android:onClick="onToggleClicked"
        android:textOff="@string/main_start_button_start"
        android:textOn="@string/main_start_button_stop" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/border_ui" 
        android:fillViewport="true"
        android:scrollbars="vertical"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:fadeScrollbars="false"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewTranscription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_margin="5dp"
                android:scrollbars="vertical"
                android:textAppearance="?android:attr/textAppearanceSmall" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>